[gd_scene load_steps=9 format=3 uid="uid://n3845gsd64vr"]

[ext_resource type="Script" path="res://Scenes/GameScenes/FishingMiniGame/MiniGameReward/FishReward/fish_reward.gd" id="1_470n4"]
[ext_resource type="Script" path="res://Scenes/GameScenes/FishingMiniGame/MiniGameReward/FishReward/v_box_container.gd" id="1_foylh"]
[ext_resource type="Environment" uid="uid://bkw1wch2q1tmq" path="res://Scenes/Utility/WorldEnvironment.tres" id="2_hguhq"]
[ext_resource type="ArrayMesh" uid="uid://7iq6ps1pi1t2" path="res://Assets/3D/Fish/Models/Fish1.obj" id="4_1wghi"]
[ext_resource type="Texture2D" uid="uid://eysxt30dx471" path="res://Assets/3D/Fish/Textures/Material.001 Normal.png" id="5_7nny0"]
[ext_resource type="Script" path="res://Scenes/GameScenes/FishingMiniGame/MiniGameReward/FishReward/Fish.gd" id="6_88f77"]

[sub_resource type="World3D" id="World3D_7cllo"]
environment = ExtResource("2_hguhq")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_43yde"]
albedo_texture = ExtResource("5_7nny0")

[node name="FishReward" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1920.0
offset_bottom = -1080.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_470n4")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 941.0
offset_bottom = 692.0
script = ExtResource("1_foylh")

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "You caught a fish!"
horizontal_alignment = 1

[node name="SubViewportContainer" type="SubViewportContainer" parent="VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_vertical = 3

[node name="SubViewport" type="SubViewport" parent="VBoxContainer/SubViewportContainer"]
own_world_3d = true
world_3d = SubResource("World3D_7cllo")
transparent_bg = true
handle_input_locally = false
size = Vector2i(945, 405)
render_target_update_mode = 4

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="VBoxContainer/SubViewportContainer/SubViewport"]
transform = Transform3D(0.201078, 0, 0.979575, 0, 1, 0, -0.979575, 0, 0.201078, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="VBoxContainer/SubViewportContainer/SubViewport"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 1.6, 0, 0)
current = true
fov = 62.1

[node name="MeshInstance3D" type="MeshInstance3D" parent="VBoxContainer/SubViewportContainer/SubViewport"]
mesh = ExtResource("4_1wghi")
surface_material_override/0 = SubResource("StandardMaterial3D_43yde")
script = ExtResource("6_88f77")

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "It is 12 inches long and weighs 20 pounds"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "It is worth 1000 gold!"
horizontal_alignment = 1

[node name="Continue" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Continue"

[connection signal="button_down" from="VBoxContainer/Continue" to="." method="_on_continue_button_down"]
